<resources>
    <string name="app_name" translatable="false">BMI Calculator</string>
    <string name="height_text" translatable="false">Height</string>
    <string name="weight_text" translatable="false">Weight</string>
    <string name="bmi_text" translatable="false">BMI</string>
    <string name="calculatebutton_text" translatable="false">CALCULATE</string>
    <string name="weight_hint" translatable="false">Enter Weight in Kg</string>
    <string name="height_hint" translatable="false">Enter Height in cm</string>
</resources>
