<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6E7FB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_textView"
        android:layout_width="300dp"
        android:layout_height="124dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/height_textView"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/height_text"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/height_editText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/height_editText"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/height_hint"
        android:textColorHint="#000000"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_textView" />

    <TextView
        android:id="@+id/weight_textView"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/weight_text"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_textView" />

    <EditText
        android:id="@+id/weight_editText"
        android:layout_width="214dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/weight_hint"
        android:textColorHint="#000000"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/weight_textView"
        app:layout_constraintTop_toBottomOf="@+id/height_editText" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="190dp"
        android:layout_height="58dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/buttonround"
        android:onClick="calculateAndDisplayBMI"
        android:text="@string/calculatebutton_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_editText" />

    <TextView
        android:id="@+id/bmi_textView"
        android:layout_width="232dp"
        android:layout_height="82dp"
        android:layout_marginTop="36dp"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/bmi_text" />

    <TextView
        android:id="@+id/category_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="171dp"
        android:textSize="24sp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>